Migrate test data to Java text blocks (batch 9)
Migrated files:
- PreferImmutableStreamExCollectionsTest.java
- PreferSafeLoggableExceptionsTest.java